objects/Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Count_of_Competed_To_Do__c</fullName>
        <label>Count of Competed To Do</label>
        <summaryFilterItems>
            <field>To_Do_Item__c.Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </summaryFilterItems>
        <summaryForeignKey>To_Do_Item__c.Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Complete__c</fullName>
        <formula>(Count_of_Competed_To_Do__c  /  Total_To_Do__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone % Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <formula>IF( Milestone_Complete__c = 0, &quot;Not Started&quot;, IF(Milestone_Complete__c = 100, &quot;Complete&quot;, &quot;In Progress&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_To_Do__c</fullName>
        <label>Total To Do</label>
        <summaryForeignKey>To_Do_Item__c.Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>